--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -21,8 +21,8 @@
     <nav id="navbar" class="app-bar__nav">
       <ul>
         <li><a href="#/home">Home</a></li>
-        <li><a href="#/about">About Us</a></li>
-        <li><a href="#/contant">Contact</a></li>
+        <li><a href="#/about">About</a></li>
+        <li><a href="#/contact">Contact</a></li>
       </ul>
     </nav>
   </header>
