Request data from API

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,31 +9,9 @@
 </head>
 
 <body>
-  <header class="app__bar">
-    <div class="app-bar__menu">
-      <button id="menuButton">&#9776;</button>
-    </div>
-
-    <div class="app-bar__logo">
-      <h1>News Reader</h1>
-    </div>
-
-    <nav id="navbar" class="app-bar__nav">
-      <ul>
-        <li><a href="#/home">Home</a></li>
-        <li><a href="#/about">About</a></li>
-        <li><a href="#/contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main id="mainContent">
-    <h2>Hello world</h2>
-  </main>
-
-  <footer>
-    <p>News Reader Copyright</p>
-  </footer>
+  <app-bar></app-bar>
+  <main id="mainContent"></main>
+  <footer-component></footer-component>
 </body>
 
 </html>
